@@ -5,6 +5,8 @@ released versions.
 
 == Development version
 
+* `flag-lines -after` switch to display text after the line
+
 * `shell-script-candidates` completion now runs the script asynchronously
   while displaying and updating results live.
 
